update add tag manager

--- a/Landing_maduracion.html
+++ b/Landing_maduracion.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
@@ -11,6 +12,8 @@
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
@@ -25,20 +28,20 @@
     <!--  -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="./css/styles.css">
+
+    <script id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/8b7f686722931bd734a2e7d9b/5aeb0cfa6f157ecbd99011dc8.js");
+    </script>
 
 </head>
 
 
 
 <body>
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-
-
-
 
 
     <header>
@@ -225,7 +228,8 @@
                 <p>✅ Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
                 <p>✅ Oportunidad de hacer preguntas en vivo durante el webinar.</p>
 
-                <p>✅ ¡Regístrate ahora para asegurar tu lugar en este webinar exclusivo y descubre cómo puedes obtener ingresos pasivos invirtiendo en cámaras de maduración de banano! </p>
+                <p>✅ ¡Regístrate ahora para asegurar tu lugar en este webinar exclusivo y descubre cómo puedes obtener
+                    ingresos pasivos invirtiendo en cámaras de maduración de banano! </p>
 
             </div>
 
