--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
 <head>
+
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
@@ -11,6 +13,8 @@
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
@@ -26,7 +30,255 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/a.css">
 
+    <script id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/8b7f686722931bd734a2e7d9b/5aeb0cfa6f157ecbd99011dc8.js");
+    </script>
+
 </head>
+
+
+
+
+<body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+
+
+
+
+    <header>
+
+        <section class="banner">
+            <div class="banner-content">
+                <div class="text_content scale-up-center">
+
+
+                    <div class="text_01">
+                        <img class="logo" src="./assets/logo_negativo.png" alt="logo">
+                        <h1> DESCUBRE EL NEGOCIO RENTABLE DE <br>
+                            LAS CÁMARAS DE MADURACIÓN DE BANANO</h1>
+                        <h2>Un negocio rentable en el boom agrícola</h2>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+    </header>
+    <div class="linea"></div>
+
+
+    <section class="seccion_01">
+        <div class="s1_cont">
+            <img src="./assets/imagens2_maduracion.png" alt="">
+            <div class="parrafo1">
+                <p>En pleno auge de la Agricultura peruana, invertir bien es invertir en las necesidades de un sector
+                    que crece de manera acelerada y que aún pocos inversionistas lo hacen. Los pocos visionarios
+                    <span>no sólo
+                        ven retornar su inversión</span> de manera rápida, sino que <span>multiplican su capital.</span>
+                </p>
+                <p>Muchos invierten en sembrar y pocos invierten en satisfacer las necesidades de los que siembran y del
+                    producto cosechado: ¡Los servicios de conservación y maduración!</p>
+            </div>
+        </div>
+        <div class="s1_cont coo">
+            <div class="parrafo2">
+                <p>La demanda de estos servicios supera con creces a la oferta actual. Miles de servicios de maduración
+                    se facturan diariamente, pero miles más quedan en espera debido a la escasez de cámaras de
+                    maduración en Lima y en todo el Perú.Es ahí donde se abren las oportunidades para todo inversor
+                    visionario.</p>
+                <p> <span>¡Es hora de capitalizar esta <br>
+                        brecha en el mercado!</span></p>
+
+            </div>
+            <img src="./assets/im002.jpeg" alt="">
+        </div>
+
+    </section>
+
+    <section class="seccion_02">
+        <div class="s02_texto">
+            <h2>INVERTIR BIEN Y <br> CON VISIÓN ES:</h2>
+            <p>INVERTIR EN LAS NECESIDADES DE UN SECTOR QUE CRECE DE MANERA ACELERADA Y QUE AUN POCOS INVERSIONISTAS LO
+                HACEN</p>
+            <h3>“LA CÁMARA DE MADURACIÓN DE FRUTAS”</h3>
+
+        </div>
+        <img src="./assets/banner_img/platanos-coomplemento.png" alt="imagen">
+
+    </section>
+    <section class="agregado">
+        <div class="container_add">
+            <h2>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un sector en crecimiento</h2>
+
+            <p>Conviértete en uno de los pioneros que satisfaga la creciente demanda de servicios de maduración y
+                conservación. No solo estarás generando ingresos significativos,  sino que también estarás contribuyendo
+                a mejorar la calidad y a mejorar significativamente el precio de venta de los productos de tus clientes.
+            </p>
+
+        </div>
+
+    </section>
+
+
+
+
+    <!-- MAILCHIMP -->
+    <section class="seccion_03" id="contact">
+        <div class="textos3">
+            <p><span>¡Descubre cómo hacerlo en una cita con un Asesor!</span></p>
+            <p>En esta reunión el asesor(a) comercial te explicará como puedes ser socio de una cámara de maduración y
+                disfrutar de las utilidades que ésta genera sin preocuparte por labores operativas y comerciales y
+                teniendo el control y el conocimiento en tiempo real de tu inversión</p>
+        </div>
+
+        <div class="calendario">
+
+            <!-- Principio del widget integrado de Calendly -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/vive-rentable/reunion-de-inversion">
+            </div>
+            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+            <!-- Final del widget integrado de Calendly -->
+        </div>
+
+    </section>
+    <!-- MAILCHIMP -->
+
+    <!-- <article class="contador">
+        <h2>FALTAN</h2>
+        <div id="countdown"></div>
+        <div class="count">
+            <p>Días</p>
+            <p>Horas</p>
+            <p>Minutos</p>
+            <p>Segundos</p>
+        </div>
+        <div class="countmb">
+            <p>D</p>
+            <p>H</p>
+            <p>M</p>
+            <p>S</p>
+        </div>
+        <h3>PARA NUESTRO WEBINAR EXCLUSIVO</h3>
+    </article> -->
+
+
+
+
+
+    <section class="seccion_04">
+
+        <div class="inferior">
+            <div class="cont1">
+                <h2>Con un capital de inversión desde S/ 20 mil, obtendrás:</h2>
+
+            </div>
+            <div class="cont2">
+                <p>Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de
+                    suministro.</p>
+                <p>Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la
+                    preocupación  de la gestión operativa y comercial.</p>
+                <p>Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
+                <p>Oportunidad de hacer preguntas en vivo durante la asesoria</p>
+            </div>
+
+
+        </div>
+        <div class="boton">
+            <a href="#contact">¡HAZ CLIC Y AGENDA UNA CITA <br>
+                CON UN ASESOR COMERCIAL</a>
+        </div>
+        <div class="cont3">
+            <h2>¡No pierdas la oportunidad de explorar el potencial de inversión en el negocio del banano con VIVE
+                Rentable!</h2>
+
+        </div>
+
+
+    </section>
+
+    <section class="seccion_05">
+
+    </section>
+
+    <footer class="footer">
+        <div class="section__container footer__container">
+            <div class="footer__col">
+                <h4>Vive Rentable</h4>
+                <p>
+                    La plataforma invita a los
+                    inversores a ser agentes de cambio en
+                    sectores como agroindustria,
+                    inmobiliario y tecnología. Transforma
+                    las inversiones en acciones, brindando
+                    oportunidades para participar en
+                    proyectos monumentales y ser
+                    protagonistas de historias de éxito.
+                </p>
+                <div class="footer__socials">
+                    <span>
+                        <a href="https://www.facebook.com/viverentablepe" target="_blank"><i
+                                class="ri-facebook-circle-fill"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.instagram.com/viverentable/" target="_blank"><i
+                                class="ri-instagram-line"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.tiktok.com/@vive_rentable_" target="_blank"><i
+                                class="ri-tiktok-fill"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.linkedin.com/company/vive-rentable/" target="_blank"><i
+                                class="ri-linkedin-fill"></i></a>
+                    </span>
+                </div>
+            </div>
+
+            <div class="footer__col">
+                <h4>Contacto</h4>
+                <a href="#contact">
+                    <span><i class="ri-mail-line"></i></span> info@vive-rentable.com
+                </a>
+                <a href="https://wa.link/garf4f" target="_blank">
+                    <span><i class="ri-phone-line"></i></span>947548260
+                </a>
+                <a target="_blank" href="https://vive-rentable.com/">
+                    <img class="logo_negativo" src="./assets/logo_negativo.png" alt="logo">
+                </a>
+            </div>
+        </div>
+        <div class="footer__bar">
+            Copyright © 2024 vive-rentable.com All rights reserved.
+        </div>
+    </footer>
+
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var toggles = document.querySelectorAll('.toggle');
+            var border = document.querySelector('.accordion-item');
+            toggles.forEach(function (toggle) {
+                toggle.addEventListener('click', function () {
+                    var content = this.parentElement.nextElementSibling;
+                    content.classList.toggle('active');
+                    this.textContent = content.classList.contains('active') ? '−' : '+';
+                });
+
+            });
+        });
+
+
+
+    </script>
+    <script src="./js/popup.js"></script>
+    <script src="/js/main.js"></script>
+
+</body>
+
 <style>
     * {
         margin: 0;
@@ -1021,247 +1273,5 @@
         }
     }
 </style>
-
-
-
-<body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
-
-
-
-    <header>
-
-        <section class="banner">
-            <div class="banner-content">
-                <div class="text_content scale-up-center">
-
-
-                    <div class="text_01">
-                        <img class="logo" src="./assets/logo_negativo.png" alt="logo">
-                        <h1> DESCUBRE EL NEGOCIO RENTABLE DE <br>
-                            LAS CÁMARAS DE MADURACIÓN DE BANANO</h1>
-                        <h2>Un negocio rentable en el boom agrícola</h2>
-
-                    </div>
-                </div>
-
-            </div>
-        </section>
-
-    </header>
-    <div class="linea"></div>
-
-
-    <section class="seccion_01">
-        <div class="s1_cont">
-            <img src="./assets/imagens2_maduracion.png" alt="">
-            <div class="parrafo1">
-                <p>En pleno auge de la Agricultura peruana, invertir bien es invertir en las necesidades de un sector
-                    que crece de manera acelerada y que aún pocos inversionistas lo hacen. Los pocos visionarios
-                    <span>no sólo
-                        ven retornar su inversión</span> de manera rápida, sino que <span>multiplican su capital.</span>
-                </p>
-                <p>Muchos invierten en sembrar y pocos invierten en satisfacer las necesidades de los que siembran y del
-                    producto cosechado: ¡Los servicios de conservación y maduración!</p>
-            </div>
-        </div>
-        <div class="s1_cont coo">
-            <div class="parrafo2">
-                <p>La demanda de estos servicios supera con creces a la oferta actual. Miles de servicios de maduración
-                    se facturan diariamente, pero miles más quedan en espera debido a la escasez de cámaras de
-                    maduración en Lima y en todo el Perú.Es ahí donde se abren las oportunidades para todo inversor
-                    visionario.</p>
-                <p> <span>¡Es hora de capitalizar esta <br>
-                        brecha en el mercado!</span></p>
-
-            </div>
-            <img src="./assets/im002.jpeg" alt="">
-        </div>
-
-    </section>
-
-    <section class="seccion_02">
-        <div class="s02_texto">
-            <h2>INVERTIR BIEN Y <br> CON VISIÓN ES:</h2>
-            <p>INVERTIR EN LAS NECESIDADES DE UN SECTOR QUE CRECE DE MANERA ACELERADA Y QUE AUN POCOS INVERSIONISTAS LO
-                HACEN</p>
-            <h3>“LA CÁMARA DE MADURACIÓN DE FRUTAS”</h3>
-
-        </div>
-        <img src="./assets/banner_img/platanos-coomplemento.png" alt="imagen">
-
-    </section>
-    <section class="agregado">
-        <div class="container_add">
-            <h2>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un sector en crecimiento</h2>
-
-            <p>Conviértete en uno de los pioneros que satisfaga la creciente demanda de servicios de maduración y
-                conservación. No solo estarás generando ingresos significativos,  sino que también estarás contribuyendo
-                a mejorar la calidad y a mejorar significativamente el precio de venta de los productos de tus clientes.
-            </p>
-
-        </div>
-
-    </section>
-
-
-
-
-    <!-- MAILCHIMP -->
-    <section class="seccion_03" id="contact">
-        <div class="textos3">
-            <p><span>¡Descubre cómo hacerlo en una cita con un Asesor!</span></p>
-            <p>En esta reunión el asesor(a) comercial te explicará como puedes ser socio de una cámara de maduración y
-                disfrutar de las utilidades que ésta genera sin preocuparte por labores operativas y comerciales y
-                teniendo el control y el conocimiento en tiempo real de tu inversión</p>
-        </div>
-
-        <div class="calendario">
-
-            <!-- Principio del widget integrado de Calendly -->
-            <div class="calendly-inline-widget" data-url="https://calendly.com/vive-rentable/reunion-de-inversion">
-            </div>
-            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-            <!-- Final del widget integrado de Calendly -->
-        </div>
-
-    </section>
-    <!-- MAILCHIMP -->
-
-    <!-- <article class="contador">
-        <h2>FALTAN</h2>
-        <div id="countdown"></div>
-        <div class="count">
-            <p>Días</p>
-            <p>Horas</p>
-            <p>Minutos</p>
-            <p>Segundos</p>
-        </div>
-        <div class="countmb">
-            <p>D</p>
-            <p>H</p>
-            <p>M</p>
-            <p>S</p>
-        </div>
-        <h3>PARA NUESTRO WEBINAR EXCLUSIVO</h3>
-    </article> -->
-
-
-
-
-
-    <section class="seccion_04">
-
-        <div class="inferior">
-            <div class="cont1">
-                <h2>Con un capital de inversión desde S/ 20 mil, obtendrás:</h2>
-
-            </div>
-            <div class="cont2">
-                <p>Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de
-                    suministro.</p>
-                <p>Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la
-                    preocupación  de la gestión operativa y comercial.</p>
-                <p>Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
-                <p>Oportunidad de hacer preguntas en vivo durante la asesoria</p>
-            </div>
-
-
-        </div>
-        <div class="boton">
-            <a href="#contact">¡HAZ CLIC Y AGENDA UNA CITA <br>
-                CON UN ASESOR COMERCIAL</a>
-        </div>
-        <div class="cont3">
-            <h2>¡No pierdas la oportunidad de explorar el potencial de inversión en el negocio del banano con VIVE
-                Rentable!</h2>
-
-        </div>
-
-
-    </section>
-
-    <section class="seccion_05">
-
-    </section>
-
-    <footer class="footer">
-        <div class="section__container footer__container">
-            <div class="footer__col">
-                <h4>Vive Rentable</h4>
-                <p>
-                    La plataforma invita a los
-                    inversores a ser agentes de cambio en
-                    sectores como agroindustria,
-                    inmobiliario y tecnología. Transforma
-                    las inversiones en acciones, brindando
-                    oportunidades para participar en
-                    proyectos monumentales y ser
-                    protagonistas de historias de éxito.
-                </p>
-                <div class="footer__socials">
-                    <span>
-                        <a href="https://www.facebook.com/viverentablepe" target="_blank"><i
-                                class="ri-facebook-circle-fill"></i></a>
-                    </span>
-                    <span>
-                        <a href="https://www.instagram.com/viverentable/" target="_blank"><i
-                                class="ri-instagram-line"></i></a>
-                    </span>
-                    <span>
-                        <a href="https://www.tiktok.com/@vive_rentable_" target="_blank"><i
-                                class="ri-tiktok-fill"></i></a>
-                    </span>
-                    <span>
-                        <a href="https://www.linkedin.com/company/vive-rentable/" target="_blank"><i
-                                class="ri-linkedin-fill"></i></a>
-                    </span>
-                </div>
-            </div>
-
-            <div class="footer__col">
-                <h4>Contacto</h4>
-                <a href="#contact">
-                    <span><i class="ri-mail-line"></i></span> info@vive-rentable.com
-                </a>
-                <a href="https://wa.link/garf4f" target="_blank">
-                    <span><i class="ri-phone-line"></i></span>947548260
-                </a>
-                <a target="_blank" href="https://vive-rentable.com/">
-                    <img class="logo_negativo" src="./assets/logo_negativo.png" alt="logo">
-                </a>
-            </div>
-        </div>
-        <div class="footer__bar">
-            Copyright © 2024 vive-rentable.com All rights reserved.
-        </div>
-    </footer>
-
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var toggles = document.querySelectorAll('.toggle');
-            var border = document.querySelector('.accordion-item');
-            toggles.forEach(function (toggle) {
-                toggle.addEventListener('click', function () {
-                    var content = this.parentElement.nextElementSibling;
-                    content.classList.toggle('active');
-                    this.textContent = content.classList.contains('active') ? '−' : '+';
-                });
-
-            });
-        });
-
-
-
-    </script>
-    <script src="./js/popup.js"></script>
-    <script src="/js/main.js"></script>
-
-</body>
 
 </html>
