--- a/gracias.html
+++ b/gracias.html
@@ -11,11 +11,16 @@
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- icon -->
     <link rel="icon" href="./assets/logo.svg" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gracias por suscribirte</title>
+
+    <script id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/8b7f686722931bd734a2e7d9b/5aeb0cfa6f157ecbd99011dc8.js");
+    </script>
 
 </head>
 <style>
@@ -30,6 +35,7 @@
         background-image: url('./assets/gracias.jpg');
         display: flex;
         justify-content: center;
+        background-repeat: no-repeat;
         align-items: center;
         width: 1000px;
         margin: auto;
@@ -171,16 +177,19 @@
 </style>
 
 <body>
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <div class="container">
         <img src="./assets/logotipo.png" alt="imagen">
         <h1>¡Gracias por <br>
             registrate con <br>
             el asesor!</h1>
-        <p><span>Has dado el primer paso hacia una oportunidad de inversión tangible y lucrativa</span> en el negocio de los
+        <p><span>Has dado el primer paso hacia una oportunidad de inversión tangible y lucrativa</span> en el negocio de
+            los
             servicios de maduración para banano. Queremos compartir contigo cómo puedes aprovechar esta oportunidad
             única.
 
