--- a/gracias_webinar.html
+++ b/gracias_webinar.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
@@ -11,11 +12,16 @@
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- icon -->
     <link rel="icon" href="./assets/logo.svg" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gracias por suscribirte a nuestro webinar</title>
+
+    <script id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/8b7f686722931bd734a2e7d9b/5aeb0cfa6f157ecbd99011dc8.js");
+    </script>
 
 </head>
 <style>
@@ -28,6 +34,7 @@
 
     body {
         background-image: url('./assets/gracias.jpg');
+        background-repeat: no-repeat;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -171,10 +178,12 @@
 </style>
 
 <body>
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <div class="container">
         <img src="./assets/logotipo.png" alt="imagen">
         <h1>¡Gracias por <br>
