Add Google tag (gtag.js) tracking code to HTML files

--- a/Landing_iquitos.html
+++ b/Landing_iquitos.html
@@ -3,6 +3,16 @@
 
 <head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BBKFMYNEG7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-BBKFMYNEG7');
+    </script>
+
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -209,7 +219,7 @@
                 <div id="mc_embed_shell">
                     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet"
                         type="text/css">
-                    
+
                     <div id="mc_embed_signup">
                         <form
                             action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
