--- a/Landing_maduracion.html
+++ b/Landing_maduracion.html
@@ -3,6 +3,16 @@
 
 <head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BBKFMYNEG7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-BBKFMYNEG7');
+    </script>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
@@ -53,9 +63,8 @@
 
                     <div class="text_01">
                         <img class="logo" src="./assets/logo_negativo.png" alt="logo">
-                        <h1> DESCUBRE EL NEGOCIO RENTABLE DE <br>
-                            LAS CÁMARAS DE MADURACIÓN DE BANANO</h1>
-                        <h2>Una inversión rentable en el boom agrícola</h2>
+                        <h1>Las cámaras de maduración de banano:</h1>
+                        <h2>Un negocio rentable en el boom agrícola</h2>
 
                     </div>
                 </div>
