--- a/gracias.html
+++ b/gracias.html
@@ -2,6 +2,16 @@
 <html lang="es">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BBKFMYNEG7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-BBKFMYNEG7');
+    </script>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
@@ -32,16 +42,17 @@
     }
 
     body {
-        background-image: url('./assets/gracias.jpg');
+        background: rgb(255, 255, 255);
+        background: radial-gradient(circle, rgba(255, 255, 255, 1) 75%, rgba(86, 205, 213, 1) 93%, rgba(0, 174, 68, 1) 100%);
         display: flex;
         justify-content: center;
-        background-repeat: no-repeat;
         align-items: center;
         width: 1000px;
         margin: auto;
         text-align: center;
         color: #005E6D;
     }
+
 
     .container {
         display: flex;
@@ -184,6 +195,7 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <div class="container">
+
         <img src="./assets/logotipo.png" alt="imagen">
         <h1>¡Gracias por <br>
             registrate con <br>
@@ -206,6 +218,7 @@
             <p>A Lima llegan diariamente más de 500,000 kg de banano, y no todos pasan por el servicio de cámara de
                 maduración porque la demanda está insatisfecha. ¿Te gustaría aprovechar esta oportunidad?</p>
         </div>
+
         <p>En la reunión programada con nuestro asesor(a) Comercial puedes sumergirte en el próspero negocio de las
             cámaras de maduración de banano</p>
 
