--- a/gracias_webinar.html
+++ b/gracias_webinar.html
@@ -43,8 +43,8 @@
     }
 
     body {
-        background-image: url('./assets/gracias.jpg');
-        background-repeat: no-repeat;
+        background: rgb(255, 255, 255);
+        background: radial-gradient(circle, rgba(255, 255, 255, 1) 75%, rgba(86, 205, 213, 1) 93%, rgba(0, 174, 68, 1) 100%);
         display: flex;
         justify-content: center;
         align-items: center;
