--- a/Landing_iquitos.html
+++ b/Landing_iquitos.html
@@ -28,8 +28,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
-    <title>Iquitos</title>
-    <link rel="stylesheet" href="./css/banner.css">
+    <title>Iquitos Vive renntable</title>
+    <meta name="description" content="LA JOYA NATURAL ESCONDIDA DEL PERÚ, UNA OPORTUNIDAD INMOBILIARIA INIGUALABLE">
+
+    <!-- Etiquetas para Facebook -->
+    <meta property="og:title" content="IQUITOS">
+    <meta property="og:description"
+        content="LA JOYA NATURAL ESCONDIDA DEL PERÚ, UNA OPORTUNIDAD INMOBILIARIA INIGUALABLE">
+    <meta property="og:image" content="./assets/seccion8.png">
+    <meta property="og:url" content="https://www.facebook.com/viverentablepe">
+    <meta property="og:type" content="website">
 
 
     <!-- FONT -->
