--- a/Landing_maduracion.html
+++ b/Landing_maduracion.html
@@ -29,6 +29,15 @@
     <link rel="icon" href="./assets/logo.svg">
     <title>WEBINAR EXCLUSIVO</title>
     <meta name="description" content="Las cámaras de maduración de banano, un negocio rentable en el boom agrícola">
+
+    <!-- Etiquetas para Facebook -->
+    <meta property="og:title" content="Webinar exclusivo">
+    <meta property="og:description"
+        content="Las cámaras de maduración de banano, un negocio rentable en el boom agrícola">
+    <meta property="og:image" content="./assets/imagens2_maduracion.png">
+    <meta property="og:url" content="https://www.facebook.com/viverentablepe">
+    <meta property="og:type" content="website">
+
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
