--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -28,14 +28,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
-    <title>WEBINAR EXCLUSIVO</title>
+    <title>RESERVA TU CITA</title>
     <meta name="description" content="Las cámaras de maduración de banano, un negocio rentable en el boom agrícola">
 
     <!-- Etiquetas para Facebook -->
-    <meta property="og:title" content="WEBINAR EXCLUSIVO">
+    <meta property="og:title" content="RESERVA TU CITA">
     <meta property="og:description"
         content="Las cámaras de maduración de banano, un negocio rentable en el boom agrícola">
-    <meta property="og:image" content="./assets/cm-002.png">
+    <meta property="og:image" content="./assets/imagens2_maduracion.png">
     <meta property="og:url" content="https://www.facebook.com/viverentablepe">
     <meta property="og:type" content="website">
 
