--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
 
 
-  <meta charset="UTF-8" />
-  <link rel="icon" href="./assets/logo.svg" type="image/x-icon">
-  <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/logo.svg">
+    <title>Vive Rentable</title>
+    <meta name="description" content="La clave para una inversión diversificada y rentable">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/styles.css" />
-  <title>Vive Rentable</title>
-  <meta property="og:locale" content="es_ES">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Vive rentable">
-  <meta property="og:description" content="La clave para una inversión diversificada y rentable ">
-  <meta property="og:url" content="vive-rentable.com">
-  <meta property="og:image" content="./assets/logo2.jpg">
+    <!-- Etiquetas para Facebook -->
+    <meta property="og:title" content="IQUITOS">
+    <meta property="og:description"
+        content="La clave para una inversión diversificada y rentable">
+    <meta property="og:image" content="./assets/logo.png">
+    <meta property="og:url" content="https://www.facebook.com/viverentablepe">
+    <meta property="og:type" content="website">
 
 
   <!-- font -->
