--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="description" content="La clave para una inversión diversificada y rentable">
 
     <!-- Etiquetas para Facebook -->
-    <meta property="og:title" content="IQUITOS">
+    <meta property="og:title" content="Vive Rentable">
     <meta property="og:description"
         content="La clave para una inversión diversificada y rentable">
     <meta property="og:image" content="./assets/logo.png">
